k8s/infrastructure/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      nodeSelector:
        kubernetes.io/hostname: rinzler
      containers:
      - name: traefik
        image: traefik:v3.3
        args:
          - "--api.insecure=true"
          - "--providers.kubernetesingress=true"
          - "--providers.kubernetescrd=true"
          - "--entrypoints.web.address=:80"
          - "--entrypoints.websecure.address=:443"
          - "--log.level=INFO"
          - "--accesslog=true"
          - "--metrics.prometheus=true"
          - "--metrics.prometheus.addEntryPointsLabels=true"
          - "--metrics.prometheus.addServicesLabels=true"
        ports:
        - name: web
          containerPort: 80
        - name: websecure
          containerPort: 443
        - name: dashboard
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
